welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
			} else if (getDirection() == Direction.OUEST) {
                               ^SnakeBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
		if (estFaceMur() == true) {
                ^